70114ee3-7c51-40a6-af98-bd2ca53150ad/17cd568b-1349-4670-a8ae-53d47334febc/8d5d2c0f-5447-4ad5-889b-75e5d7a3a35f/kubernates/solr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr-deployment-aa7098b5-0f03-4f41-bb10-db9a919a52eb
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  labels:
    app: solr-aa7098b5-0f03-4f41-bb10-db9a919a52eb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solr-aa7098b5-0f03-4f41-bb10-db9a919a52eb
  template:
    metadata:
      labels:
        app: solr-aa7098b5-0f03-4f41-bb10-db9a919a52eb
    spec:
      containers:
        - name: solr-aa7098b5-0f03-4f41-bb10-db9a919a52eb
          image: ravi8881/3219e62e-f28c-4e9a-b62e-77aae69fb44b-70114ee3-7c51-40a6-af98-bd2ca53150ad-17cd568b-1349-4670-a8ae-53d47334febc-8d5d2c0f-5447-4ad5-889b-75e5d7a3a35f:2.0.0
          ports:
            - containerPort: 8983
          volumeMounts:
            - name: solr-data-volume
              mountPath: /data # This path is where Solr looks for its cores
      volumes:
        - name: solr-data-volume
          persistentVolumeClaim:
            claimName: 8d5d2c0f-5447-4ad5-889b-75e5d7a3a35f # This name must match the PVC metadata.name
      securityContext:
        runAsUser: 8983
        runAsGroup: 8983
        fsGroup: 8983
